# krunc

./: .gitignore  QUICKSTART.md  README.md
.github/workflows/: ci.yml
bpf/: krunc_lsm.bpf.c  krunc_lsm_loader.c
cli/: go.mod  main.go
conformance/: go.mod  go.sum  main.go
docs/: ARCHITECTURE.md  DESIGN.md  ROADMAP.md  SECURITY.md  sample-containerd-run.txt  sample-oci-run.txt  sample-run.txt  sample-v2-confinement.txt
docs/research-notes/: 01-oci-runtime-spec.md  02-setup-security-and-cves.md  03-post-setup-escapes-and-enforcement.md  04-kernel-apis-and-rfl.md  05-bsd-jails-and-prior-art.md  06-conformance-and-testing.md  README.md
examples/bundle/: config.json  esc-cli-config.json  esc-config.json
kernel-patch/: krunc_exports.c  krunc_filter_add.inc  krunc_landlock_add.inc  krunc_seccomp_add.inc
module/: Kbuild  Makefile  krunc.rs  krunc_helper.c
scripts/: build-bpf.sh  build-cli.sh  build-kernel.sh  build-module.sh  make-initramfs.sh  patch-kernel-seccomp.sh  pin-rust.sh  qemu-aya-cli-init.sh  qemu-aya-init.sh  qemu-bpflsm-init.sh  qemu-conformance-init.sh  qemu-containerd-init.sh  qemu-init.sh  qemu-pty-init.sh  qemu-realimage-init.sh  qemu-shell-init.sh  qemu-userns-init.sh  run-bpflsm.sh  run-checks.sh  run-containerd.sh  run-interactive.sh  run-qemu.sh  run-realimage.sh  run-test.sh  setup-containerd-image.sh  vm-setup.sh
userspace/: Cargo.toml
userspace/krunc-bpf/: Cargo.toml
userspace/krunc-bpf/src/: main.rs
userspace/krunc-cli/: Cargo.toml
userspace/krunc-cli/src/: bpflsm.rs  cgroup.rs  device.rs  main.rs  pty.rs
(+12 files in other folders)
