[package]
name = "krunc-cli"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0"

[[bin]]
name = "krunc"
path = "src/main.rs"

[dependencies]
krunc-abi = { path = "../krunc-abi" }
krunc-oci = { path = "../krunc-oci" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
libc = "0.2"
